--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FortNite Stat Tracker</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../src/static/css/style.css">
   </head>
   <body>
-    <div id="main"></div>
-    <script src="/js/bundle.js"></script>
+    <div>Page Not Found!!!!</div>
+    <script src="../src/static/js/bundle.js"></script>
   </body>
 </html>
