--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="main"></div>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
     <script src="/static/js/bundle.js"></script>
   </body>
 </html>
