--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,11 +1,72 @@
-/* Landing page */
-
-.form {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
+body {
+  margin: 0;
 }
 
-.usernameInput, .platformInput, .landingSubmit {
-  margin-top: 10px;
+/* Landing page */
+.form {
+  display: flex;
+  align-items: flex-end;
+}
+
+.form1, .form2 {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-family: sans-serif;
+  margin-right: 20px;
+}
+
+.fortniteBody {
+  background-color: #253455;
+  height: 1000px;
+  padding: 20px 100px;
+}
+
+.explanation {
+  color: white;
+  font-family: sans-serif;
+  margin-bottom: 20px;
+  background-color: #3A5E86;
+  border: 0.5px solid black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.error {
+  color: red;
+}
+
+button, .platformInput {
+  cursor: pointer;
+}
+
+.usernameInput {
+  font-size: 18px;
+  border-radius: 3px;
+  padding-left: 5px;
+}
+
+.platformInput {
+  font-size: 18px;
+}
+
+button {
+  font-size: 18px;
+  border-radius: 5px;
+}
+
+/* Header */
+.header {
+  background-color: #2A2A2A;
+  display: flex;
+  align-items: center;
+  color: white;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+.fortniteLogo {
+  height: auto;
+  width: 150px;
 }
