--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FortNite Stat Tracker</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <title>FORTNITE Stat Tracker</title>
+    <link rel="stylesheet" href="/static/css/style.css">
   </head>
   <body>
     <div id="main"></div>
